--- a/Social-Dash-UI/index.html
+++ b/Social-Dash-UI/index.html
@@ -9,29 +9,22 @@
         <title>Social Media Dashboard</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="./scss/main.css">
     </head>
     <body>
         
-        <div class="wrapper>">
+        <div class="wrapper">
 
             <header>
                 <div class="top-left-title">
                     <h1 class="title">Social Media Dashboard</h1>
-                    <span>Total Followers: 23,004</span>
+                    <span class="tl-follow">TOTAL FOLLOWERS: 23,004</span>
                 </div>
 
-                <div class="theme-toggle">
-                    <label for="dark" id="dark">
-                        <input type="checkbox">
-                        <span class="slider"></span>
-                    </label>
-
-                    <label for="light" id="light">
-                        <input type="checkbox">
-                        <span class=""></span>
-                    </label>
-                </div>
+                <label for="toggle" id="theme-toggle">
+                    <input type="checkbox">
+                    <span class="slider round"></span>
+                </label>
             </header>
 
                 <!-- Followers UI -->
